Add Android SDK to path

--- a/Dockerfile-6.8
+++ b/Dockerfile-6.8
@@ -45,5 +45,6 @@ RUN locale-gen en_US.UTF-8
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
 
 ENV ANDROID_HOME=/android-sdk
+ENV PATH=/android-sdk/tools/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 CMD ["/bin/bash"]
