--- a/Dockerfile-7.0
+++ b/Dockerfile-7.0
@@ -1,12 +1,12 @@
-FROM node:10-stretch
+FROM node:14-buster
 
 ENV SDK_FILENAME=commandlinetools-linux-6609375_latest.zip
 ENV SDK_CHECKSUM=89f308315e041c93a37a79e0627c47f21d5c5edbe5e80ea8dc0aac8a649e0e92
 
-# java 8
+# java 11
 RUN apt-get update && \
-    apt-get install -y unzip openjdk-8-jdk-headless ruby2.3 ruby2.3-dev python3-pip locales \
-        jed less rsync && \
+    apt-get install -y unzip openjdk-11-jdk-headless ruby2.5 ruby2.5-dev python3-pip locales \
+        jed less rsync rclone && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /var/lib/apt/*
 
@@ -22,8 +22,8 @@ RUN cd /tmp && \
     tools/bin/sdkmanager --sdk_root=/android-sdk \
         "tools" \
         "platform-tools" \
-        "platforms;android-28" \
-        "build-tools;28.0.3" \
+        "platforms;android-29" \
+        "build-tools;29.0.3" \
         "extras;google;m2repository" \
         "extras;android;m2repository" && \
     rm -rf /tmp/*
@@ -41,8 +41,8 @@ RUN pip3 install segno
 RUN gem install bundle
 
 # fix issue where there is a unicode character in the commit message (also involves install of locales above)
-RUN locale-gen en_US.UTF-8
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
+RUN locale-gen en_US.UTF-8
 
 ENV ANDROID_HOME=/android-sdk
 ENV PATH=/android-sdk/tools/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
